# faustlab

./: .gitignore  CMakeLists.txt  Makefile  README.md  setup.py
docs/: build-faust.md  cyfaust_block_api.md  links.md
projects/: CMakeLists.txt
projects/cfaust/: CMakeLists.txt  cfaust.pyx  faust_box_c.pxd  faust_interp.pxd  faust_signal_c.pxd  signal.pyx
projects/cyfaust/: CMakeLists.txt  README.md  box.h  cyfaust.cpp  cyfaust.pyx  cyfaust_box.pxd  cyfaust_box.pyx  cyfaust_signal.pxd  cyfaust_signal.pyx  faust_box.pxd  faust_box.pxi  faust_interp.pxd  faust_signal.pxd  faust_signal.pxi  parse.py  signal.h  signal.pyx
projects/cyfaust/scripts/: gen.py
projects/nanofaust/: CMakeLists.txt  nanofaust.cpp
projects/pbfaust/: CMakeLists.txt  pbfaust.cpp
projects/pyfaust/: CMakeLists.txt  pyfaust.cpp  pyfaust.pybind11.cpp
scripts/: setup.sh
tests/: rtaudio-dsp-fixed.h  test_cfaust.py  test_cyfaust.py  test_nanofaust.py  test_pyfaust.py
tests/test_faust_interp/: interp-audio-min.cpp  interp-audio-test.cpp
